<resources>

    <!-- Database nodes -->
    <string name="node_users">users</string>


    <string name="app_name">ThePetApp</string>
    <string name="title_home">Home</string>
    <string name="title_favor">Favor</string>
    <string name="title_add">Add</string>
    <string name="title_message">Message</string>
    <string name="title_profile">Profile</string>

    <!-- Explored fragment -->
    <string name="explored_fragment">Welcome to explored fragment</string>
    <string name="explored_text">Explored</string>
    <string name="explored_new_pets">New Pets</string>
    <string name="explored_top_breeder">Top Breeders</string>


    <!-- featured fragment -->
    <string name="featured_fragment">Welcome to featured fragment</string>
    <string name="featured_text">Featured</string>
    <string name="featured_pet_news">Pet news</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- featured fragment -->
    <string name="profile_fragment">Profile fragment</string>

    <integer-array name="img_id_arr">
        <item>@drawable/images_1</item>
        <item>@drawable/images_2</item>
        <item>@drawable/images_3</item>
        <item>@drawable/images_4</item>
    </integer-array>
</resources>
